tags/2013-08-29_cppreference/Archive/ae3132394e1ee1eaafa0a01125a08b6e-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:18:12: error: invalid initialization of non-const reference of type ‘X&’ from an rvalue of type ‘X’
  func(fun());
            ^
main.cpp:10:6: error: in passing argument 1 of ‘void func(X&)’
 void func(X &x)
      ^
